fixed the header spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,10 +8,9 @@
 *{
     padding: 0px;
     margin: 0px;
-
-    
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
+
 body{
 background-color: rgba(234, 234, 234, 0.33);
 
@@ -19,34 +18,33 @@ background-color: rgba(234, 234, 234, 0.33);
 
 header{
     background-color: var(--dark);
-   
-    
-
+    display: flex;
+    align-items: center;
 }
+
 h1{
-    position: absolute;
-    left: 8%;
-    top: 2%;
+    margin-left: 8%;
+    margin-right: auto;
     color: var(--light);
     font-size: 300%;
 }
+
 nav{
     display: flex;
     flex-flow: row wrap;
-    justify-content: center
+    justify-content: flex-end;
 }
 nav ul{ 
+    display: flex;
+    flex-flow: row wrap;
     list-style: none;
-    font-size: 250%;  
-    
-    
+    font-size: 200%;  
 
 }
 nav li{
-    margin: 1rem 4rem 2rem 0rem;
-    
-    padding: 0.5rem;
-    border-bottom: 5px solid var(--light);
+    margin: 1rem 2rem 2rem 0;
+  padding: 0.5rem;
+  border-bottom: 5px solid var(--light);
 }
 
 nav a{
@@ -105,12 +103,13 @@ h2{
 
 
 .container{
+  display: flex;
   
+  flex-wrap: wrap;
   padding: 3%;
   width: 70%;
-  display: flex;
-  flex-wrap: wrap;
   border-left: 5px solid var(--dark);
+  
 }
 
 .card{
@@ -135,6 +134,10 @@ h2{
     transition: opacity 0.3s ease-in;
     
 
+}
+.resize{ 
+    height: 300px; 
+    width: 45%;
 }
 .card img:hover{
     opacity: 1;
